--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "url": "https://github.com/michaelliao/learn-javascript.git"
     },
     "dependencies": {
-        "sequelize": "3.24.1",
-        "mysql": "2.11.1",
         "koa": "2.0.0",
         "koa-bodyparser": "3.2.0",
-        "koa-router": "7.0.0"
+        "koa-router": "7.0.0",
+        "koa2-cors": "2.0.5",
+        "mysql": "2.11.1",
+        "npm": "^5.7.1",
+        "sequelize": "3.24.1"
     }
 }
