--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "koa-bodyparser": "3.2.0",
         "koa-router": "7.0.0",
         "koa2-cors": "2.0.5",
+        "koa2-useragent": "^0.2.8",
         "mysql": "2.11.1",
         "npm": "^5.7.1",
         "sequelize": "3.24.1"
